# linux-codex-app

./: .gitignore  README.md  README.zh-CN.md  index.html  install.sh  linux-codex-app.repo  package.json
docs/: release.md  repository-retention.md
plugins/computer-use/native/: CMakeLists.txt  codex-computer-use-eis.cpp  codex-computer-use-glow.cpp  codex-computer-use-screenshot.cpp
scripts/: activate-install.sh  add-local-bundled-marketplace-plugins.mjs  build-runtime-packages.sh  build-runtime-rpm.sh  bundled-plugin-blacklist.json  bundled-skills-integrity.mjs  check-codex-cli-update.sh  check-dmg-update.sh  check-release-inputs.mjs  codex-linux-onepassword-browser-provider.cjs  dmg-cache.sh  electron-runtime-cache.sh  ensure-codex-cli.sh  ensure-linux-patches.mjs  filter-bundled-marketplace.mjs  install-computer-use-access.sh  install-dolphin-window-access.sh  install-kitty-window-access.sh  linux-browser-automation.mjs  linux-browser-profile-import.cjs  linux-chrome-extension-host.mjs  linux-codex-app  linux-dolphin-file-manager.mjs  linux-node-repl.mjs  patch-browser-use-plugin.mjs  patch-chrome-plugin.mjs  patch-linux-runtime.mjs  patch-native-module-sources.mjs  plugin-test-utils.mjs  probe-linux-patches.mjs  prune-staged-installs.sh  publish-github-pages-repo.mjs  release-local.sh  run-silent-update.sh  smoke-computer-use-plugin.mjs  stage-bundled-plugins.mjs  sync-and-release-linux-codex-app.sh  test-bundled-skills-integrity.mjs  test-computer-use-broker.py  test-computer-use-plugin.mjs  (+15 more)
upstream/: codex-app-20260527.json  codex-app-20260530.json  (+5 more)
(+85 files in other folders)
